--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css"
         crossorigin="anonymous">
@@ -13,6 +17,38 @@
 </head>
 
 <body>
+
+    <header>
+        <div class="grid-x">
+            <div class="header flex-child-auto">
+                <h1>Playlist Producer</h1>
+            </div>
+    </header>
+    <section>
+        <div class="h2-mood-text">
+            <h2>How are you feeling today?</h2>
+        </div>
+        <div class="h4-img-text">
+            <h4>Select any images that apply to you!</h4>
+        </div>
+    </section>
+    <main>
+        <div class="grid-x align-spaced emoji-row-1">
+            <p class="happy">😄</p>
+            <p class="sad">😥</p>
+            <p class="angry">🤬</p>
+            <p class="loving">🥰</p>
+        </div>
+        <div class="grid-x align-spaced emoji-row-2">
+            <p class="silly">🤪</p>
+            <p class="cheerful">🥳</p>
+            <p class="motivated">💪</p>
+            <p class="sleepy">😴</p>
+        </div>
+        <div class="grid-x align-center">
+            <button class="button large expanded custom-btn">Submit</button>
+        </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
