--- a/results.html
+++ b/results.html
@@ -122,7 +122,7 @@
     <!-- Compressed JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"
         crossorigin="anonymous"></script>
-    <script src="./assets/script/script.js"></script>
+    <script src="./assets/script/results.js"></script>
 </body>
 
 </html>
