--- a/results.html
+++ b/results.html
@@ -23,7 +23,7 @@
         </div>
 </header>
     <div class="cell medium-auto medium-cell-block-container">
-      <div class="grid-x grid-margin-x align-justify">
+      <div class="grid-x grid-margin-x align-center">
         <div class="cell medium-3 medium-cell-block-y">
             <div class="card" style="width: 300px;">
                 <div class="card-divider" id="moods">
@@ -31,9 +31,21 @@
                 </div>
                 <img src="assets/img/generic/rectangle-1.jpg">
                 <div class="card-section">
-                  <h4>This is a card.</h4>
-                  <p>It has an easy to override visual style, and is appropriately subdued.</p>
+                 <p> Generate a new playlist:</p>
                 </div>
+                <div class="grid-x align-spaced emoji-row-1">
+                  <p class="happy">😄</p>
+                  <p class="sad">😥</p>
+                  <p class="angry">🤬</p>
+                  <p class="loving">🥰</p>
+              </div>
+              <div class="grid-x align-spaced emoji-row-2">
+                  <p class="silly">🤪</p>
+                  <p class="cheerful">🥳</p>
+                  <p class="motivated">💪</p>
+                  <p class="sleepy">😴</p>
+              </div>
+              <button class="button large expanded custom-btn">Submit</button>
               </div>
         </div>
         <div class="cell medium-3 medium-cell-block-y">
@@ -43,8 +55,13 @@
             </div>
             <img src="assets/img/generic/rectangle-1.jpg">
             <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+              <h4>Playlist </h4>
+              <button class="custom-btn-details">
+                <span>Details</span>
+              </button>
+              <button class="custom-btn-like">
+                <span>Like ❤️</span>
+              </button>
             </div>
           </div>
         </div>
@@ -55,8 +72,13 @@
                 </div>
                 <img src="assets/img/generic/rectangle-1.jpg">
                 <div class="card-section">
-                  <h4>This is a card.</h4>
-                  <p>It has an easy to override visual style, and is appropriately subdued.</p>
+                  <h4>Playlist</h4>
+                  <button class="custom-btn-details">
+                    <span>Details</span>
+                  </button>
+                  <button class="custom-btn-like">
+                    <span>Like ❤️</span>
+                  </button>
                 </div>
               </div>
           </div>
@@ -67,8 +89,10 @@
                 </div>
                 <img src="assets/img/generic/rectangle-1.jpg">
                 <div class="card-section">
-                  <h4>This is a card.</h4>
-                  <p>It has an easy to override visual style, and is appropriately subdued.</p>
+                  <p>Use previous selections to generate a new playlist.</p>
+                </div>
+                <button class="button large expanded custom-btn">New Playlist</button>
+                </div>
                 </div>
               </div>
         </div>
@@ -81,8 +105,14 @@
                 </div>
                 <img src="assets/img/generic/rectangle-1.jpg">
                 <div class="card-section">
-                  <h4>This is a card.</h4>
-                  <p>It has an easy to override visual style, and is appropriately subdued.</p>
+                  <ul>
+                    <li>favorites</li>
+                    <li>favorites</li>
+                    <li>favorites</li>
+                    <li>favorites</li>
+                    <li>favorites</li>
+                    <li>favorites</li>
+                  </ul>
                 </div>
               </div>
       </div>
@@ -93,8 +123,13 @@
             </div>
             <img src="assets/img/generic/rectangle-1.jpg">
             <div class="card-section">
-              <h4>This is a card.</h4>
-              <p>It has an easy to override visual style, and is appropriately subdued.</p>
+              <h4>Playlist 3</h4>
+              <button class="custom-btn-details">
+                <span>Details</span>
+              </button>
+              <button class="custom-btn-like">
+                <span>Like ❤️</span>
+              </button>
             </div>
           </div>
     </div>
@@ -105,8 +140,13 @@
         </div>
         <img src="assets/img/generic/rectangle-1.jpg">
         <div class="card-section">
-          <h4>This is a card.</h4>
-          <p>It has an easy to override visual style, and is appropriately subdued.</p>
+          <h4>Playlist 4</h4>
+          <button class="custom-btn-details">
+            <span>Details</span>
+          </button>
+          <button class="custom-btn-like">
+            <span>Like ❤️</span>
+          </button>
         </div>
       </div>
     </div>
