changes/rewrite results.html and add to css

--- a/results.html
+++ b/results.html
@@ -22,8 +22,8 @@
             <h1>Here are some playlists based on your mood! </h1>
         </div>
 </header>
-    <div class="cell medium-auto medium-cell-block-container">
-      <div class="grid-x grid-margin-x align-justify">
+    <!-- <div class="cell medium-auto medium-cell-block-container">
+      <div class="grid-x grid-margin-x">
         <div class="cell medium-3 medium-cell-block-y">
             <div class="card" style="width: 300px;">
                 <div class="card-divider" id="moods">
@@ -31,8 +31,20 @@
                 </div>
                 <img src="assets/img/generic/rectangle-1.jpg">
                 <div class="card-section">
-                  <h4>This is a card.</h4>
-                  <p>It has an easy to override visual style, and is appropriately subdued.</p>
+                  <p> Generate a new playlist:</p>
+                  <div class="grid-x align-spaced emoji-row-1">
+                    <p class="happy">😄</p>
+                    <p class="sad">😥</p>
+                    <p class="angry">🤬</p>
+                    <p class="loving">🥰</p>
+                    </div>
+                    <div class="grid-x align-spaced emoji-row-2">
+                      <p class="silly">🤪</p>
+                      <p class="cheerful">🥳</p>
+                      <p class="motivated">💪</p>
+                      <p class="sleepy">😴</p>
+                  </div>
+                </div>
                 </div>
               </div>
         </div>
@@ -112,7 +124,123 @@
     </div>
     </div>
     </div>
+</div> -->
+
+<main>
+  <div class="grid-x margin-x align-spaced row-1">
+    <div class="card" style="width: 300px;">
+      <div class="card-divider" id="moods">
+        Moods 
+      </div>
+      <img src="assets/img/generic/rectangle-1.jpg">
+      <div class="card-section">
+        <p> Generate a new playlist:</p>
+        <div class="grid-x align-spaced emoji-row-1">
+          <p class="happy">😄</p>
+          <p class="sad">😥</p>
+          <p class="angry">🤬</p>
+          <p class="loving">🥰</p>
+          </div>
+          <div class="grid-x align-spaced emoji-row-2">
+            <p class="silly">🤪</p>
+            <p class="cheerful">🥳</p>
+            <p class="motivated">💪</p>
+            <p class="sleepy">😴</p>
+          </div>
+          <button class="button large custom-btn-submit">Submit</button>
+          </div>
+        </div>
+      <div class="card" style="width: 300px;">
+        <div class="card-divider" id="playlist-1">
+          Playlist 1
+         </div>
+         <img src="assets/img/generic/rectangle-1.jpg">
+         <div class="card-section">
+           <h4>Playlist </h4>
+           <button class="custom-btn-details">
+             <span>Details</span>
+           </button>
+           <button class="custom-btn-like">
+             <span>Like ❤️</span>
+           </button>
+         </div>
+         </div>
+         <div class="card" style="width: 300px;">
+          <div class="card-divider" id="playlist-1">
+            Playlist 1
+           </div>
+           <img src="assets/img/generic/rectangle-1.jpg">
+           <div class="card-section">
+             <h4>Playlist </h4>
+             <button class="custom-btn-details">
+               <span>Details</span>
+             </button>
+             <button class="custom-btn-like">
+               <span>Like ❤️</span>
+             </button>
+           </div>
+      </div>
+      <div class="card" style="width: 300px;">
+        <div class="card-divider" id="notmymood">
+         I'm not in the mood for these . . .
+        </div>
+        <img src="assets/img/generic/rectangle-1.jpg">
+        <div class="card-section">
+          <h4>This is a card.</h4>
+          <p>It has an easy to override visual style, and is appropriately subdued.</p>
+        </div>
+      </div>
+  </div>
+  <div class="grid-x margin-x align-spaced row-2">
+    <div class="card" style="width: 300px;">
+      <div class="card-divider" id="favorites">
+       Favorites
+      </div>
+      <img src="assets/img/generic/rectangle-1.jpg">
+      <div class="card-section">
+        <ul>
+          <li>favorites</li>
+          <li>favorites</li>
+          <li>favorites</li>
+          <li>favorites</li>
+          <li>favorites</li>
+          <li>favorites</li>
+        </ul>
+      </div>
+    </div>
+    <div class="card" style="width: 300px;">
+      <div class="card-divider" id="playlist-1">
+        Playlist 1
+       </div>
+       <img src="assets/img/generic/rectangle-1.jpg">
+       <div class="card-section">
+         <h4>Playlist </h4>
+         <button class="custom-btn-details">
+           <span>Details</span>
+         </button>
+         <button class="custom-btn-like">
+           <span>Like ❤️</span>
+         </button>
+       </div>
+  </div>
+  <div class="card" style="width: 300px;">
+    <div class="card-divider" id="playlist-1">
+      Playlist 1
+     </div>
+     <img src="assets/img/generic/rectangle-1.jpg">
+     <div class="card-section">
+       <h4>Playlist </h4>
+       <button class="custom-btn-details">
+         <span>Details</span>
+       </button>
+       <button class="custom-btn-like">
+         <span>Like ❤️</span>
+       </button>
+     </div>
 </div>
+
+
+  </div>
 </body>
     
      
