finished rewriting results.html and added code to CSS

--- a/results.html
+++ b/results.html
@@ -126,120 +126,135 @@
     </div>
 </div> -->
 
-<main>
-  <div class="grid-x margin-x align-spaced row-1">
-    <div class="card" style="width: 300px;">
+<div class="cell medium-auto medium-cell-block-container">
+  <div class="grid-x grid-margin-x align-center">
+    <div class="cell medium-3 medium-cell-block-y">
+      <div class="card" style="width: 300px;">
       <div class="card-divider" id="moods">
-        Moods 
+        <h2>Moods</h2>
       </div>
       <img src="assets/img/generic/rectangle-1.jpg">
       <div class="card-section">
         <p> Generate a new playlist:</p>
-        <div class="grid-x align-spaced emoji-row-1">
-          <p class="happy">😄</p>
-          <p class="sad">😥</p>
-          <p class="angry">🤬</p>
-          <p class="loving">🥰</p>
-          </div>
-          <div class="grid-x align-spaced emoji-row-2">
-            <p class="silly">🤪</p>
-            <p class="cheerful">🥳</p>
-            <p class="motivated">💪</p>
-            <p class="sleepy">😴</p>
-          </div>
-          <button class="button large custom-btn-submit">Submit</button>
-          </div>
-        </div>
-      <div class="card" style="width: 300px;">
-        <div class="card-divider" id="playlist-1">
-          Playlist 1
-         </div>
-         <img src="assets/img/generic/rectangle-1.jpg">
-         <div class="card-section">
-           <h4>Playlist </h4>
-           <button class="custom-btn-details">
-             <span>Details</span>
-           </button>
-           <button class="custom-btn-like">
-             <span>Like ❤️</span>
-           </button>
-         </div>
-         </div>
-         <div class="card" style="width: 300px;">
-          <div class="card-divider" id="playlist-1">
-            Playlist 1
-           </div>
-           <img src="assets/img/generic/rectangle-1.jpg">
-           <div class="card-section">
-             <h4>Playlist </h4>
-             <button class="custom-btn-details">
-               <span>Details</span>
-             </button>
-             <button class="custom-btn-like">
-               <span>Like ❤️</span>
-             </button>
-           </div>
       </div>
-      <div class="card" style="width: 300px;">
-        <div class="card-divider" id="notmymood">
-         I'm not in the mood for these . . .
+      <div class="grid-x align-spaced emoji-row-1">
+        <p class="happy">😄</p>
+        <p class="sad">😥</p>
+        <p class="angry">🤬</p>
+        <p class="loving">🥰</p>
         </div>
-        <img src="assets/img/generic/rectangle-1.jpg">
-        <div class="card-section">
-          <h4>This is a card.</h4>
-          <p>It has an easy to override visual style, and is appropriately subdued.</p>
-        </div>
+        <div class="grid-x align-spaced emoji-row-2">
+          <p class="silly">🤪</p>
+          <p class="cheerful">🥳</p>
+          <p class="motivated">💪</p>
+          <p class="sleepy">😴</p>
       </div>
-  </div>
-  <div class="grid-x margin-x align-spaced row-2">
-    <div class="card" style="width: 300px;">
-      <div class="card-divider" id="favorites">
-       Favorites
-      </div>
-      <img src="assets/img/generic/rectangle-1.jpg">
-      <div class="card-section">
-        <ul>
-          <li>favorites</li>
-          <li>favorites</li>
-          <li>favorites</li>
-          <li>favorites</li>
-          <li>favorites</li>
-          <li>favorites</li>
-        </ul>
+      <button class="button large expanded custom-btn-submit">Submit</button>
       </div>
     </div>
-    <div class="card" style="width: 300px;">
-      <div class="card-divider" id="playlist-1">
-        Playlist 1
-       </div>
-       <img src="assets/img/generic/rectangle-1.jpg">
-       <div class="card-section">
-         <h4>Playlist </h4>
-         <button class="custom-btn-details">
-           <span>Details</span>
-         </button>
-         <button class="custom-btn-like">
-           <span>Like ❤️</span>
-         </button>
-       </div>
+    <div class="cell medium-3 medium-cell-block-y">
+      <div class="card" style="width: 300px;">
+        <div class="card-divider" id="playlist-1">
+          <h2>Playlist 1</h2>
+        </div>
+        <img src="assets/img/generic/rectangle-1.jpg">
+      <div class="card-section align-self-middle flex-child-auto">
+        <p>Playlist</p>
+        <button class="custom-btn-details">
+          <span>Details</span>
+        </button>
+        <button class="custom-btn-like">
+          <span>Like ❤️</span>
+        </button>
+      </div>
+    </div>
   </div>
-  <div class="card" style="width: 300px;">
-    <div class="card-divider" id="playlist-1">
-      Playlist 1
-     </div>
-     <img src="assets/img/generic/rectangle-1.jpg">
-     <div class="card-section">
-       <h4>Playlist </h4>
-       <button class="custom-btn-details">
-         <span>Details</span>
-       </button>
-       <button class="custom-btn-like">
-         <span>Like ❤️</span>
-       </button>
-     </div>
+  <div class="cell medium-3 medium-cell-block-y">
+    <div class="card" style="width: 300px;">
+      <div class="card-divider" id="playlist-2">
+        <h2>Playlist 2</h2>
+      </div>
+      <img src="assets/img/generic/rectangle-1.jpg">
+    <div class="card-section align-self-middle">
+      <p>Playlist</p>
+      <button class="custom-btn-details">
+        <span>Details</span>
+      </button>
+      <button class="custom-btn-like">
+        <span>Like ❤️</span>
+      </button>
+    </div>
+  </div>
 </div>
-
-
+<div class="cell medium-3 medium-cell-block-y">
+  <div class="card" style="width: 300px;">
+    <div class="card-divider" id="try-playlist-again">
+      <h2>Try Again</h2>
+    </div>
+    <img src="assets/img/generic/rectangle-1.jpg">
+  <div class="card-section align-self-middle">
+  <p class="try-again" id="try-again-image">🔄</p>
+</div>
+<button class="button large expanded custom-btn-submit">New Playlist</button>
+</div>
+</div>
+</div>
+<div class="grid-x grid-margin-x">
+  <div class="cell medium-3 medium-cell-block-y">
+    <div class="card text-center" style="width: 300px;">
+    <div class="card-divider" id="favorites">
+      <h2>Favorites</h2>
+    </div>
+    <img src="assets/img/generic/rectangle-1.jpg">
+    <div class="card-section">
+      <ul>
+        <li>favorites</li>
+        <li>favorites</li>
+        <li>favorites</li>
+        <li>favorites</li>
+        <li>favorites</li>
+        <li>favorites</li>
+        <li>favorites</li>
+      </ul>
+    </div>
+    </div>
+    </div>
+    <div class="cell medium-3 medium-cell-block-y">
+      <div class="card" style="width: 300px;">
+        <div class="card-divider" id="playlist-3">
+          <h2>Playlist 3</h2>
+        </div>
+        <img src="assets/img/generic/rectangle-1.jpg">
+      <div class="card-section align-self-middle">
+        <p>Playlist</p>
+        <button class="custom-btn-details">
+          <span>Details</span>
+        </button>
+        <button class="custom-btn-like">
+          <span>Like ❤️</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="cell medium-3 medium-cell-block-y">
+    <div class="card" style="width: 300px;">
+      <div class="card-divider align-self-stretch" id="playlist-4">
+        <h2>Playlist 4</h2>
+      </div>
+      <img src="assets/img/generic/rectangle-1.jpg">
+    <div class="card-section align-self-middle">
+      <p>Playlist</p>
+      <button class="custom-btn-details">
+        <span>Details</span>
+      </button>
+      <button class="custom-btn-like">
+        <span>Like ❤️</span>
+      </button>
+    </div>
+  </div>
+</div>
+  </div>
+</div>
   </div>
 </body>
     
