--- a/index.html
+++ b/index.html
@@ -34,16 +34,32 @@
     </section>
     <main>
         <div class="grid-x align-spaced emoji-row-1">
-            <p class="happy">😄</p>
-            <p class="sad">😥</p>
-            <p class="angry">🤬</p>
-            <p class="loving">🥰</p>
+            <input id="happyCheck" type="checkbox"><label for="happyCheck">
+                <p id="happy" class="happy icon-large">😄</p>
+            </label>
+            <input id="sadCheck" type="checkbox"><label for="sadCheck">
+                <p id="sad" class="sad icon-large">😥</p>
+            </label>
+            <input id="angryCheck" type="checkbox"><label for="angryCheck">
+                <p id="angry" class="angry icon-large">🤬</p>
+            </label>
+            <input id="lovingCheck" type="checkbox"><label for="lovingCheck">
+                <p id="loving" class="loving icon-large">🥰</p>
+            </label>
         </div>
         <div class="grid-x align-spaced emoji-row-2">
-            <p class="silly">🤪</p>
-            <p class="cheerful">🥳</p>
-            <p class="motivated">💪</p>
-            <p class="sleepy">😴</p>
+            <input id="sillyCheck" type="checkbox"><label for="sillyCheck">
+                <p id="silly" class="silly icon-large">🤪</p>
+            </label>
+            <input id="cheerfulCheck" type="checkbox"><label for="cheeryfulCheck">
+                <p id="cheerful" class="cheerful icon-large">🥳</p>
+            </label>
+            <input id="motivatedCheck" type="checkbox"><label for="motivatedCheck">
+                <p id="motivated" class="motivated icon-large">💪</p>
+            </label>
+            <input id="sleepyCheck" type="checkbox"><label for="sleepyCheck">
+                <p id="sleepy" class="sleepy icon-large">😴</p>
+            </label>
         </div>
         <div class="grid-x align-center">
             <button class="button large expanded custom-btn">Submit</button>
