display card from array

--- a/results.html
+++ b/results.html
@@ -51,11 +51,11 @@
     <div class="cell medium-3 medium-cell-block-y">
       <div class="card" style="width: 300px;">
         <div class="card-divider" id="playlist-1">
-          <h2>Playlist 1</h2>
+          <h2 id="playlist-1-title">Playlist 1</h2>
         </div>
-        <img src="assets/img/generic/rectangle-1.jpg">
+        <img id="playlist-1-img" src="assets/img/generic/rectangle-1.jpg">
       <div class="card-section align-self-middle flex-child-auto">
-        <p>Playlist</p>
+        <p id="playlist-1-details">Playlist</p>
         <button class="custom-btn-details">
           <span>Details</span>
         </button>
