--- a/index.html
+++ b/index.html
@@ -34,35 +34,35 @@
     </section>
     <main>
         <div class="grid-x align-spaced emoji-row-1">
-            <input id="happyCheck" type="checkbox"><label for="happyCheck">
+            <input id="happyCheck" type="checkbox" class="input-check"><label for="happyCheck">
                 <p id="happy" class="happy icon-large">😄</p>
             </label>
-            <input id="sadCheck" type="checkbox"><label for="sadCheck">
+            <input id="sadCheck" type="checkbox" class="input-check"><label for="sadCheck">
                 <p id="sad" class="sad icon-large">😥</p>
             </label>
-            <input id="angryCheck" type="checkbox"><label for="angryCheck">
+            <input id="angryCheck" type="checkbox" class="input-check"><label for="angryCheck">
                 <p id="angry" class="angry icon-large">🤬</p>
             </label>
-            <input id="lovingCheck" type="checkbox"><label for="lovingCheck">
+            <input id="lovingCheck" type="checkbox" class="input-check"><label for="lovingCheck">
                 <p id="loving" class="loving icon-large">🥰</p>
             </label>
         </div>
         <div class="grid-x align-spaced emoji-row-2">
-            <input id="sillyCheck" type="checkbox"><label for="sillyCheck">
+            <input id="sillyCheck" type="checkbox" class="input-check"><label for="sillyCheck">
                 <p id="silly" class="silly icon-large">🤪</p>
             </label>
-            <input id="cheerfulCheck" type="checkbox"><label for="cheeryfulCheck">
+            <input id="cheerfulCheck" type="checkbox" class="input-check"><label for="cheerfulCheck">
                 <p id="cheerful" class="cheerful icon-large">🥳</p>
             </label>
-            <input id="motivatedCheck" type="checkbox"><label for="motivatedCheck">
+            <input id="motivatedCheck" type="checkbox" class="input-check"><label for="motivatedCheck">
                 <p id="motivated" class="motivated icon-large">💪</p>
             </label>
-            <input id="sleepyCheck" type="checkbox"><label for="sleepyCheck">
+            <input id="sleepyCheck" type="checkbox" class="input-check"><label for="sleepyCheck">
                 <p id="sleepy" class="sleepy icon-large">😴</p>
             </label>
         </div>
         <div class="grid-x align-center">
-            <button class="button large expanded custom-btn">Submit</button>
+            <button id='submit-btn' class="button large expanded custom-btn">Submit</button>
         </div>
     </main>
 
