--- a/results.html
+++ b/results.html
@@ -49,25 +49,25 @@
       </div>
     </div>
     <div class="cell medium-3 medium-cell-block-y">
-      <div class="card" style="width: 300px;">
-        <div class="card-divider" id="playlist-1">
+      <div class="card" style="width: 300px;" id="playlist-1">
+        <!-- <div class="card-divider">
           <h2 id="playlist-1-title">Playlist 1</h2>
         </div>
         <img id="playlist-1-img" src="assets/img/generic/rectangle-1.jpg">
-      <div class="card-section align-self-middle flex-child-auto">
-        <p id="playlist-1-details">Playlist</p>
-        <button class="custom-btn-details">
-          <span>Details</span>
-        </button>
-        <button class="custom-btn-like">
-          <span>Like ❤️</span>
-        </button>
+        <div class="card-section align-self-middle flex-child-auto">
+          <p id="playlist-1-details">Playlist</p>
+          <button class="custom-btn-details">
+            <span>Details</span>
+          </button>
+          <button class="custom-btn-like">
+            <span>Like ❤️</span>
+          </button>
+        </div> -->
       </div>
-    </div>
   </div>
   <div class="cell medium-3 medium-cell-block-y">
-    <div class="card" style="width: 300px;">
-      <div class="card-divider" id="playlist-2">
+    <div class="card" style="width: 300px;" id="playlist-2">
+      <!-- <div class="card-divider">
         <h2>Playlist 2</h2>
       </div>
       <img src="assets/img/generic/rectangle-1.jpg">
@@ -79,7 +79,7 @@
       <button class="custom-btn-like">
         <span>Like ❤️</span>
       </button>
-    </div>
+    </div> -->
   </div>
 </div>
 <div class="cell medium-3 medium-cell-block-y">
@@ -108,8 +108,8 @@
     </div>
     </div>
     <div class="cell medium-3 medium-cell-block-y">
-      <div class="card" style="width: 300px;">
-        <div class="card-divider" id="playlist-3">
+      <div class="card" style="width: 300px;" id="playlist-3">
+        <!-- <div class="card-divider">
           <h2>Playlist 3</h2>
         </div>
         <img src="assets/img/generic/rectangle-1.jpg">
@@ -121,12 +121,12 @@
         <button class="custom-btn-like">
           <span>Like ❤️</span>
         </button>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="cell medium-4 medium-cell-block-y">
-    <div class="card" style="width: 300px;">
-      <div class="card-divider align-self-stretch" id="playlist-4">
+    <div class="card" style="width: 300px;" id="playlist-4">
+      <!-- <div class="card-divider align-self-stretch">
         <h2>Playlist 4</h2>
       </div>
       <img src="assets/img/generic/rectangle-1.jpg">
@@ -137,8 +137,8 @@
       </button>
       <button class="custom-btn-like">
         <span>Like ❤️</span>
-      </button>
-    </div>
+      </button> 
+     </div> -->
   </div>
 </div>
   </div>
