finished linking up emojis to genre ids on both index and results html

--- a/results.html
+++ b/results.html
@@ -34,18 +34,34 @@
         <p> Generate a new playlist:</p>
       </div>
       <div class="grid-x align-spaced emoji-row-1">
-        <p class="happy">😄</p>
-        <p class="sad">😥</p>
-        <p class="angry">🤬</p>
-        <p class="loving">🥰</p>
+        <input id="happyCheck" type="checkbox" value="happy" class="input-check"><label for="happyCheck">
+          <p id="happy" class="happy icon-med">😄</p>
+      </label>
+      <input id="sadCheck" type="checkbox" value="sad" class="input-check"><label for="sadCheck">
+          <p id="sad" class="sad icon-med">😥</p>
+      </label>
+      <input id="angryCheck" type="checkbox" value="angry" class="input-check"><label for="angryCheck">
+          <p id="angry" class="angry icon-med">🤬</p>
+      </label>
+      <input id="lovingCheck" type="checkbox" value="loving" class="input-check"><label for="lovingCheck">
+          <p id="loving" class="loving icon-med">🥰</p>
+      </label>
         </div>
         <div class="grid-x align-spaced emoji-row-2">
-          <p class="silly">🤪</p>
-          <p class="cheerful">🥳</p>
-          <p class="motivated">💪</p>
-          <p class="sleepy">😴</p>
+          <input id="sillyCheck" type="checkbox" value="silly" class="input-check"><label for="sillyCheck">
+            <p id="silly" class="silly icon-med">🤪</p>
+        </label>
+        <input id="cheerfulCheck" type="checkbox" value="cheerful" class="input-check"><label for="cheerfulCheck">
+            <p id="cheerful" class="cheerful icon-med">🥳</p>
+        </label>
+        <input id="motivatedCheck" type="checkbox" value="motivated" class="input-check"><label for="motivatedCheck">
+            <p id="motivated" class="motivated icon-med">💪</p>
+        </label>
+        <input id="sleepyCheck" type="checkbox" value="sleepy" class="input-check"><label for="sleepyCheck">
+            <p id="sleepy" class="sleepy icon-med">😴</p>
+        </label>
       </div>
-      <button class="button large expanded custom-btn-submit">Submit</button>
+      <button id="submit-btn" class="button large expanded custom-btn-submit">Submit</button>
       </div>
     </div>
     <div class="cell medium-3 medium-cell-block-y">
