new playlist button

--- a/results.html
+++ b/results.html
@@ -107,7 +107,7 @@
   <div class="card-section align-self-middle">
   <p class="try-again" id="try-again-image">🔄</p>
 </div>
-<button class="button large expanded custom-btn-submit">New Playlist</button>
+<button class="button large expanded custom-btn-submit" id="nextBtn">New Playlist</button>
 </div>
 </div>
 </div>
