added local storage code

--- a/results.html
+++ b/results.html
@@ -29,7 +29,7 @@
       <div class="card-divider" id="moods">
         <h2>Moods</h2>
       </div>
-      <img src="assets/img/generic/rectangle-1.jpg">
+      <!-- <img src="assets/img/generic/rectangle-1.jpg"> -->
       <div class="card-section">
         <p> Generate a new playlist:</p>
       </div>
@@ -117,7 +117,7 @@
     <div class="card-divider" id="favorites">
       <h2>Favorites</h2>
     </div>
-    <img src="assets/img/generic/rectangle-1.jpg">
+    <!-- <img src="assets/img/generic/rectangle-1.jpg"> -->
     <div class="card-section">
       <ul></ul>
     </div>
