--- a/results.html
+++ b/results.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <!-- Compressed CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css"
         crossorigin="anonymous">
@@ -104,7 +103,7 @@
     <div class="card-divider" id="try-playlist-again">
       <h2>Try Again</h2>
     </div>
-    <img src="assets/img/generic/rectangle-1.jpg">
+    <!-- <img src="assets/img/generic/rectangle-1.jpg"> -->
   <div class="card-section align-self-middle">
   <p class="try-again" id="try-again-image">🔄</p>
 </div>
