--- a/results.html
+++ b/results.html
@@ -114,12 +114,11 @@
 <div class="grid-x grid-margin-x">
   <div class="cell medium-3 medium-cell-block-y">
     <div class="card text-center" style="width: 300px;">
-    <div class="card-divider" id="favorites">
+    <div class="card-divider" id="try-again-image">
       <h2>Favorites</h2>
     </div>
     <!-- <img src="assets/img/generic/rectangle-1.jpg"> -->
-    <div class="card-section">
-      <ul></ul>
+    <div class="card-section" id="fav-content">
     </div>
     </div>
     </div>
