--- a/results.html
+++ b/results.html
@@ -62,6 +62,7 @@
         </label>
       </div>
       <button id="submit-btn" class="button large expanded custom-btn-submit">Submit</button>
+      <a href="./index.html"><button class="button large expanded custom-btn-submit">Go Back</button></a>
       </div>
     </div>
     <div class="cell medium-3 medium-cell-block-y">
