cleaned results html and worked on css styling

--- a/results.html
+++ b/results.html
@@ -67,10 +67,12 @@
     </div>
     <div class="cell large-auto">
       <div class="card" style="width: 325px;" id="playlist-1">
+        <!-- playlist info -->
       </div>
     </div>
     <div class="cell large-auto">
       <div class="card" style="width: 325px;" id="playlist-2">
+        <!-- playlist info -->
       </div>
     </div>
     <div class="grid-x grid-margin-x">
@@ -78,17 +80,21 @@
         <div class="card" style="width: 325px;">
           <div class="card-divider" id="try-again-image">
             <h2>Favorites</h2>
+            <!-- playlist info -->
           </div>
           <div class="card-section" id="fav-content">
+            <!-- playlist info -->
           </div>
         </div>
       </div>
       <div class="cell large-auto" id="card-5">
         <div class="card" style="width: 325px;" id="playlist-3">
+          <!-- playlist info -->
         </div>
       </div>
       <div class="cell large-auto" id="card-6">
         <div class="card" style="width: 325px;" id="playlist-4">
+          <!-- playlist info -->
         </div>
       </div>
     </div>
